--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
   "description": "iNotebook - Your notebook on the cloud",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anshit Krishan",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "mongoose": "^8.4.0"
   },
   "devDependencies": {
